[package]
name = "anchor-parser-example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anchor-parser = { path = "..", features = ["client"] }
solana-sdk = "3"
solana-client = "3"
borsh = "1"
bytemuck = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
