[package]
name = "anchor-parser-macros"
version = "0.1.0"
edition = "2024"
description = "Proc-macro companion for anchor-parser — generates Rust types from Anchor IDL JSON"
license = "MIT"
repository = "https://github.com/goni/anchor-parser"
keywords = ["solana", "anchor", "idl", "proc-macro"]
categories = ["development-tools", "parsing"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
heck = "0.5"
bs58 = "0.5"
