[package]
name = "anchor-parser-macros"
version = "0.1.4"
edition = "2024"
description = "Internal proc-macro implementation detail of anchor-parser. Do not use directly."
license = "MIT"
repository = "https://github.com/goni098/anchor-parser"
keywords = ["solana", "anchor", "idl", "proc-macro"]
categories = ["development-tools", "parsing"]

[package.metadata.docs.rs]
all-features = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
heck = "0.5"
bs58 = "0.5"
